--- a/assets/css/entrada.css
+++ b/assets/css/entrada.css
@@ -23,4 +23,14 @@
 }
 .modal-idioma.oculto {
   display: none;
+}
+
+.backdrop {
+  position: fixed;
+  z-index: 90;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
 }/*# sourceMappingURL=entrada.css.map */
