--- a/assets/css/gal.css
+++ b/assets/css/gal.css
@@ -2,64 +2,33 @@
   box-sizing: border-box;
 } */
 
-.rig-row {
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  padding: 0 4px;
+#gal {
+  display: grid;
+  max-width: 1240px;
+  width: 90%;
+  margin: auto;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: masonry;
+  gap: 1rem;
+  grid-auto-flow: dense;
+  padding: 0 0 6rem;
 }
 
-.rig-column {
-  -ms-flex: 25%;
-  flex: 25%;
-  max-width: 25%;
-  padding: 0 4px;
+#gal .item-galeria {
+  display: inline-block;
 }
 
-.rig-column img {
-  margin-top: 8px;
-  vertical-align: middle;
-  width: 100%;
+#gal .item-galeria.ancho {
+  grid-column: span 2;
 }
 
-@media (max-width: 768px) {
-  .rig-column {
-    -ms-flex: 50%;
-    flex: 50%;
-    max-width: 50%;
-  }
+#gal .item-galeria.alto {
+  grid-row: span 2;
 }
 
-@media (max-width: 576px) {
-  .rig-column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
-@media (min-width: 768px) {
-  .rig-h2 {
-    font-size: 60px;
-  }
-}
-
-@media (max-width: 767px) {
-  .rig-h2 {
-    font-size: 35px;
-  }
-}
-
-@media (min-width: 768px) {
-  .rig-p {
-    font-size: 22px;
-  }
-}
-
-@media (max-width: 767px) {
-  .rig-p {
-    font-size: 16px;
-  }
+#gal .item-galeria.grande {
+  grid-column: span 2;
+  grid-row: span 2;
 }
 
 .piedeobraGal {
@@ -86,4 +55,3 @@
 
 .galink:hover {
 }
-
