--- a/assets/css/gal.css
+++ b/assets/css/gal.css
@@ -7,10 +7,10 @@
   max-width: 1910px;
   width: 98%;
   margin: auto;
-  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
   gap: 1rem;
   grid-auto-flow: dense;
-  padding: 8rem 0 6rem;
+  padding: 8rem 0 6rem !important;
 }
 @media (max-width: 720px) {
   #gal {  
