--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -397,3 +397,17 @@ label {
   font-family: 'League Spartan', sans-serif;
   color: var(--bs-link-color);
 }
+
+.card {
+  border-radius: 12px;
+  margin-bottom: 20px;
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.25);
+  -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.25);
+}
+
+.card-title {
+  margin-bottom: var(--bs-card-title-spacer-y);
+  color: var(--bs-danger);
+  font-weight: bold;
+  font-style: italic;
+}
